NXP-27613: Add Map and List Bindings in AbstractBindingResolver